<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Fragments.Calculator">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/resultView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/fullTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="40sp"
            tools:ignore="RtlCompat" />
    </ScrollView>

    <TextView
        android:id="@+id/resultView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/stringNumber0"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/buttonParentLeft"
                style="@style/Button.Higher"
                android:layout_weight="1"
                android:text="@string/stringParentLeft"
                android:textColorHighlight="#6C4DA3"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/buttonParentRight"
                style="@style/Button.Higher"
                android:layout_weight="1"
                android:text="@string/stringParentRight"
                android:textColorHighlight="#6C4DA3"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/buttonPower"
                style="@style/Button.Higher"
                android:layout_weight="1"
                android:text="@string/stringPower"
                android:textColorHighlight="#6C4DA3"
                tools:ignore="VisualLintButtonSize" />

            <ImageButton
                android:id="@+id/buttonMore"
                style="@style/Button.Image"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/baseline_more_vert_24"
                tools:ignore="VisualLintButtonSize,SpeakableTextPresentCheck"
                android:contentDescription="TODO" />

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/buttonClear"
                style="@style/Button.Orange"
                android:layout_weight="1"
                android:text="@string/stringAC"
                android:textColorHighlight="#985A5A"
                tools:ignore="VisualLintButtonSize" />

            <ImageButton
                android:id="@+id/buttonBackspace"
                style="@style/Button.Classic"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:importantForAccessibility="no"
                android:src="@drawable/backspace"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/buttonPerc"
                style="@style/Button.Orange"
                android:layout_weight="1"
                android:text="@string/stringPer"
                android:textColorHighlight="#6C4DA3"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/buttonDiv"
                style="@style/Button.Orange"
                android:layout_weight="1"
                android:text="@string/stringDiv"
                android:textColorHighlight="#6C4DA3"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/buttonNumber7"
                style="@style/Button.Classic"
                android:layout_weight="1"
                android:text="@string/stringNumber7"
                android:textColorHighlight="#985A5A"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/buttonNumber8"
                style="@style/Button.Classic"
                android:layout_weight="1"
                android:text="@string/stringNumber8"
                android:textColorHighlight="#6C4DA3"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/buttonNumber9"
                style="@style/Button.Classic"
                android:layout_weight="1"
                android:text="@string/stringNumber9"
                android:textColorHighlight="#6C4DA3"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/buttonMult"
                style="@style/Button.Orange"
                android:layout_weight="1"
                android:text="@string/stringMul"
                android:textColorHighlight="#6C4DA3"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/buttonNumber4"
                style="@style/Button.Classic"
                android:layout_weight="1"
                android:text="@string/stringNumber4"
                android:textColorHighlight="#6C4DA3"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/buttonNumber5"
                style="@style/Button.Classic"
                android:layout_weight="1"
                android:text="@string/stringNumber5"
                android:textColorHighlight="#6C4DA3"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/buttonNumber6"
                style="@style/Button.Classic"
                android:layout_weight="1"
                android:text="@string/stringNumber6"
                android:textColorHighlight="#6C4DA3"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/buttonMinus"
                style="@style/Button.Orange"
                android:layout_weight="1"
                android:text="@string/stringMinus"
                android:textColorHighlight="#6C4DA3"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/buttonNumber1"
                style="@style/Button.Classic"
                android:layout_weight="1"
                android:text="@string/stringNumberOne"
                android:textColorHighlight="#6C4DA3"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/buttonNumber2"
                style="@style/Button.Classic"
                android:layout_weight="1"
                android:text="@string/stringNumberTwo"
                android:textColorHighlight="#6C4DA3"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/buttonNumber3"
                style="@style/Button.Classic"
                android:layout_weight="1"
                android:text="@string/stringNumber3"
                android:textColorHighlight="#6C4DA3"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/buttonPlus"
                style="@style/Button.Orange"
                android:layout_weight="1"
                android:text="@string/stringPlus"
                android:textColorHighlight="#6C4DA3"
                tools:ignore="VisualLintButtonSize"
                tools:layout_editor_absoluteY="570dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/buttonNumber0"
                style="@style/Button.Classic"
                android:layout_weight="1"
                android:text="@string/stringNumber0"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/buttonNumber00"
                style="@style/Button.Classic"
                android:layout_weight="1"
                android:text="@string/stringNumber00"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/buttonDot"
                style="@style/Button.Classic"
                android:layout_weight="1"
                android:text="@string/stringDot"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/buttonEquals"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:text="@string/stringEquals"
                android:textColor="@color/white"
                android:textColorHighlight="#F87400"
                android:textSize="30sp"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>